prevent zooming on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body {
 a, button, input {
   background-color: rgba(0,0,0,0%);
   font-family: "JetBrains Mono", monospace !important;
+  font-size: 16px;
   color: #999;
   transition: all 250ms ease-in-out;
   text-decoration: none;
